Pascal/test/cohadar/pascal/errors/incompatible_types.pas
program test;
var a: integer;

begin
	a := 0.5;
end.